# cpp-artifacts

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
bench/: hashing_bench.cpp
cmake/: clang_tidy.cmake  sanitizers.cmake  warnings.cmake
perf/: bench_results.csv
scripts/: run_bench.sh
src/: main.cpp
src/hashing/: consistent_hashing.cpp  consistent_hashing.h
tests/: hashing_tests.cpp
